added hover states

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     <div class="dachshund">
         <div class="back"></div>
         <div class="repeat">
-            <div class="left_fab"><img src="assets/icons/caret_left.svg" alt="extend_left"></div>
-            <div class="right_fab"><img src="assets/icons/caret_right.svg" alt="extend_right"></div>
+            <div class="hover_area_left">
+                <div class="left_fab"><img src="assets/icons/caret_left.svg" alt="extend_left"></div>
+            </div>
+            <div class="hover_area_right">
+                <div class="right_fab"><img src="assets/icons/caret_right.svg" alt="extend_right"></div>
+            </div>
         </div>
         <div class="front"></div>
     </div>
